2008-04-12	Chris Johns <chrisj@rtems.org>

	* libmisc/shell/shell.c, libmisc/shell/shell.h,
	libmisc/shell/shell_script.c: Add support to echo the commands to
	stdout. This is useful with the -v script option to show commands
	as the run. Also added support to chdir to the directory the task
	invoking the script is in.
	* libmisc/shell/extern-cp.h, libmisc/shell/main_cp.c,
	libmisc/shell/utils-cp.c: Update tro the latest FreeBSD version.
	* libcsupport/Makefile.am, libcsupport/src/fchown.c: Add fchown
	support.

2008-04-09	Madhusudan.C.S <madhusudancs@gmail.com>

	* score/include/rtems/score/tod.h: Fix typo.

2008-04-08	Chris Johns <chrisj@rtems.org>

	* libmisc/shell/shell.c: Copy the cmd line to a buffer to split
	into argv parts. Was using the command line history buffer so the
	history was being corrupted.

2008-04-03	Chris Johns <chrisj@rtems.org>

	* libfs/src/nfsclient/src/librtemsNfs.h,
	libfs/src/nfsclient/src/nfs.c: Remove CEXP references. CEXP is
	external to RTEMS and even if in the cpukit it should not cross
	reference in this way.
	* libmisc/shell/shell_getchar.c: New. Taken from the monitor.
	* libmisc/Makefile.am: Add shell_getchar.c and clean up a little
	in the shell area.
	* libmisc/shell/shell.c, libmisc/shell/shell.h: Add line editting
	support.

2008-03-29	Chris Johns <chrisj@rtems.org>

	* librpc/include/rpc/clnt.h: Added the missing __BEGIN_DECLS as
	reported to the mailing list by Pierre Kestener
	(pierre.kestener@cea.fr).

2008-03-25	Till Straumann <strauman@slac.stanford.edu>

	* shttpd/log.c: Activate SPLIT_SNPRINTF for gcc <= 4.2.3 and
	  coldfire.

2008-03-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/cmds.c: Directly register the command structure to
	avoid unnecessary duplication of static strings. We know best this
	time.

2008-03-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/include/confdefs.h: Do not reserve 2 * minimum stack size
	for the ITRON initialization tasks ALL the time.